--- a/src/styles/scss/Header.scss
+++ b/src/styles/scss/Header.scss
@@ -1,14 +1,4 @@
-@keyframes blink {
-  0% {
-    background-color: var(--secondary-highlight-color);
-    box-shadow: 0 0 0.75rem 0 var(--secondary-highlight-color);
-  }
-
-  100% {
-    background-color: var(--quaternary-highlight-color);
-    box-shadow: 0 0 0.25rem var(--quaternary-highlight-color);
-  }
-}
+@import './animations';
 
 @mixin d-flex-fd-ai-jc-g($flex-direction: row, $align-items: stretch, $justify-content: stretch, $gap: 0) {
   display: flex;
