--- a/src/styles/scss/Header.scss
+++ b/src/styles/scss/Header.scss
@@ -30,8 +30,8 @@
   }
 
   &--home {
+    background-color: transparent;
     background-image: linear-gradient(var(--primary-shadow-color), var(--secondary-shadow-color));
-
 
     & .header-nav__menu-icon {
       fill: var(--inverse-secondary-text-color);
@@ -203,7 +203,6 @@
       font-size: 1.125rem;
     }
   }
-
 
   &__menu-close-icon-container {
     position: absolute;
