--- a/src/styles/scss/CinemasHome.scss
+++ b/src/styles/scss/CinemasHome.scss
@@ -65,6 +65,7 @@
 
   &__title {
     color: var(--quinary-text-color);
+    text-align: center;
     font-weight: 900;
     font-size: 2rem;
     font-family: 'Montserrat', sans-serif;
@@ -73,17 +74,21 @@
 
   &__cards-container {
     display: grid;
-    grid-template-columns: 1fr 0.75fr 1fr 1.375fr 0.9375fr 0.9375fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 0.75rem;
-    padding: 0 8rem;
-    grid-template-areas:
-      "card-1 card-1 card-1 card-2 card-3 card-3"
-      "card-1 card-1 card-1 card-2 card-3 card-3"
-      "card-1 card-1 card-1 card-2 card-3 card-3"
-      "card-1 card-1 card-1 card-4 card-3 card-3"
-      "card-1 card-1 card-1 card-4 card-5 card-6"
-      "card-1 card-1 card-1 card-4 card-5 card-6";
+
+    @include desktop() {
+      grid-template-columns: 1fr 0.75fr 1fr 1.375fr 0.9375fr 0.9375fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+      padding: 0 8rem;
+      grid-template-areas:
+        "card-1 card-1 card-1 card-2 card-3 card-3"
+        "card-1 card-1 card-1 card-2 card-3 card-3"
+        "card-1 card-1 card-1 card-2 card-3 card-3"
+        "card-1 card-1 card-1 card-4 card-3 card-3"
+        "card-1 card-1 card-1 card-4 card-5 card-6"
+        "card-1 card-1 card-1 card-4 card-5 card-6";
+    }
   }
 
   &__card-container {
@@ -91,7 +96,22 @@
     background-color: var(--primary-shadow-color);
     width: 100%;
     height: 100%;
+    overflow: hidden;
     transition: var(--primary-all-transitions);
+
+    &--premiere::after {
+      content: 'Estreno';
+      position: absolute;
+      left: -25%;
+      top: 5%;
+      transform: rotate(-37deg);
+      background: linear-gradient(var(--quaternary-highlight-color), var(--secondary-highlight-color));
+      color: var(--inverse-secondary-text-color);
+      text-align: center;
+      font-size: 1.125rem;
+      line-height: 2rem;
+      width: 100%;
+    }
 
     &:hover {
       transform: scale(1.05);
@@ -118,28 +138,30 @@
       opacity: 1;
     }
 
-    &:nth-child(1) {
-      grid-area: card-1;
-    }
+    @include desktop() {
+      &:nth-child(1) {
+        grid-area: card-1;
+      }
 
-    &:nth-child(2) {
-      grid-area: card-2;
-    }
+      &:nth-child(2) {
+        grid-area: card-2;
+      }
 
-    &:nth-child(3) {
-      grid-area: card-3;
-    }
+      &:nth-child(3) {
+        grid-area: card-3;
+      }
 
-    &:nth-child(4) {
-      grid-area: card-4;
-    }
+      &:nth-child(4) {
+        grid-area: card-4;
+      }
 
-    &:nth-child(5) {
-      grid-area: card-5;
-    }
+      &:nth-child(5) {
+        grid-area: card-5;
+      }
 
-    &:nth-child(6) {
-      grid-area: card-6;
+      &:nth-child(6) {
+        grid-area: card-6;
+      }
     }
   }
 
