--- a/src/styles/scss/_mixins.scss
+++ b/src/styles/scss/_mixins.scss
@@ -12,6 +12,23 @@
   padding: var(--padding-container);
 }
 
+@mixin button($background-color: var(--primary-button-color), $box-shadow: #0050b280, $border-radius: var(--secondary-border-radius), $font-size: 0.75rem, $font-weight: 400, $padding: 0.25em 1em, $active-button-color: var(--primary-active-button-color)) {
+  background-color: $background-color;
+  box-shadow: 0 0 1rem 0.125rem $box-shadow;
+  border: none;
+  border-radius: $border-radius;
+  color: var(--primary-button-text-color);
+  font-size: $font-size;
+  font-weight: $font-weight;
+  padding: $padding;
+  transition: var(--primary-all-transitions);
+
+  &--active,
+  &:hover {
+    background-color: $active-button-color;
+  }
+}
+
 @mixin desktop() {
   @media (min-width: 854px) {
     @content;
