--- a/src/styles/scss/CinemasHome.scss
+++ b/src/styles/scss/CinemasHome.scss
@@ -34,7 +34,7 @@
   &__content-title {
     position: relative;
     z-index: 5;
-    color: var(--inverse-secondary-text-color);
+    color: var(--primary-button-text-color);
     font-weight: 800;
     font-size: 2rem;
     font-family: 'Montserrat', sans-serif;
@@ -52,7 +52,7 @@
       left: -1rem;
       height: 4rem;
       width: 10rem;
-      background-color: var(--secondary-highlight-color);
+      background-color: var(--secondary-button-color);
 
       @include desktop() {
         top: -1.25rem;
@@ -68,7 +68,7 @@
 
     @include desktop() {
       display: flex;
-      color: var(--inverse-secondary-text-color);
+      color: var(--primary-button-text-color);
       font-size: 1.125rem;
       max-width: 512px;
       margin: 0;
@@ -76,7 +76,7 @@
   }
 
   &__content-buy {
-    @include button(var(--secondary-button-color), #e302467a, var(--secondary-border-radius), 0.75rem, 400, 0.5em 1em, var(--secondary-active-button-color));
+    @include button(var(--secondary-button-color), #e302467a, var(--primary-border-radius), 0.75rem, 400, 0.5em 1em, var(--secondary-active-button-color));
     text-decoration: none;
 
     @include desktop() {
@@ -88,6 +88,7 @@
 .home-gallery {
   background-color: var(--secondary-theme-color);
   padding: var(--padding-section);
+  transition: var(--secondary-all-transitions);
 
   &__container {
     @include d-flex-fd-ai-jc-g(column, stretch, stretch, 1.5rem);
@@ -101,6 +102,7 @@
     font-size: 2rem;
     font-family: 'Montserrat', sans-serif;
     margin: 0;
+    transition: var(--secondary-all-transitions);
   }
 
   &__cards-container {
@@ -136,8 +138,8 @@
       left: -25%;
       top: 5%;
       transform: rotate(-37deg);
-      background: linear-gradient(var(--quaternary-highlight-color), var(--secondary-highlight-color));
-      color: var(--inverse-secondary-text-color);
+      background: linear-gradient(var(--secondary-active-button-color), var(--secondary-button-color));
+      color: var(--primary-button-text-color);
       text-align: center;
       font-size: 1.125rem;
       line-height: 2rem;
@@ -214,11 +216,11 @@
   }
 
   &__card-buy {
-    @include button(var(--secondary-button-color), #e302467a, var(--secondary-border-radius), 0.75rem, 400, 0.25em 1em, var(--secondary-active-button-color));
+    @include button(var(--secondary-button-color), #e302467a, var(--primary-border-radius), 0.75rem, 400, 0.25em 1em, var(--secondary-active-button-color));
     text-decoration: none;
   }
 
   &__card-description {
-    @include button(var(--primary-button-color), #0050b280, var(--secondary-border-radius), 0.75rem, 400, 0.25em 1em, var(--primary-active-button-color));
+    @include button(var(--primary-button-color), #0050b280, var(--primary-border-radius), 0.75rem, 400, 0.25em 1em, var(--primary-active-button-color));
   }
 }
