--- a/src/styles/scss/_mixins.scss
+++ b/src/styles/scss/_mixins.scss
@@ -14,18 +14,29 @@
 
 @mixin button($background-color: var(--primary-button-color), $box-shadow: #0050b280, $border-radius: var(--primary-border-radius), $font-size: 0.75rem, $font-weight: 400, $padding: 0.25em 1em, $active-button-color: var(--primary-active-button-color)) {
   background-color: $background-color;
-  box-shadow: 0 0 1rem 0.125rem $box-shadow;
-  border: none;
+  border: 0.0625rem solid $background-color;
   border-radius: $border-radius;
   color: var(--primary-button-text-color);
   font-size: $font-size;
   font-weight: $font-weight;
   padding: $padding;
   transition: var(--primary-all-transitions);
+  box-sizing: border-box;
 
   &--active,
   &:hover {
     background-color: $active-button-color;
+    box-shadow: 0 0 0.5rem 0.125rem $box-shadow;
+    border: 0.0625rem solid $active-button-color;
+  }
+
+  &--outline {
+    background-color: transparent;
+    color: var(--primary-text-color);
+
+    &:hover {
+      background-color: transparent;
+    }
   }
 }
 
