--- a/src/styles/scss/Footer.scss
+++ b/src/styles/scss/Footer.scss
@@ -2,6 +2,7 @@
 
 .footer {
   box-shadow: 0 0 0.75rem 0 var(--primary-shadow-color);
+  margin-top: auto;
 }
 
 .footer-nav {
@@ -11,8 +12,13 @@
   &__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 2rem;
+    gap: 2.5rem;
     @include container;
+
+    @include desktop() {
+      grid-template-columns: 1fr 1fr 1fr;
+      gap: 4rem;
+    }
   }
 
   &__link-list {
@@ -20,6 +26,10 @@
     margin: 0;
     padding: 0;
     list-style: none;
+
+    @include desktop() {
+      gap: 1.5rem;
+    }
   }
 
   &__link-item {
@@ -37,16 +47,28 @@
       color: var(--inverse-secondary-text-color);
       transform: scale(1.05);
     }
+
+    @include desktop() {
+      font-size: 1rem;
+    }
   }
 
   &__contact-container {
-    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 1.5rem);
+    @include d-flex-fd-ai-jc-g(column, flex-start, stretch, 1.5rem);
+
+    @include desktop() {
+      gap: 2rem;
+    }
   }
 
   &__contact-message {
     color: var(--inverse-secondary-text-color);
     font-size: 0.75rem;
     margin: 0;
+
+    @include desktop() {
+      font-size: 1rem;
+    }
   }
 
   &__contact-social-networks {
@@ -55,12 +77,12 @@
   }
 
   &__contact-social-network {
-    width: 2.5rem;
-    height: 2.5rem;
     @include d-flex-fd-ai-jc-g(row, center, center, 0);
     color: var(--inverse-primary-text-color);
     font-size: 2.5rem;
     line-height: 2.5rem;
+    width: 2.5rem;
+    height: 2.5rem;
     transition: var(--primary-all-transitions);
 
     &:hover {
@@ -69,10 +91,10 @@
     }
 
     @include desktop() {
-      width: 3rem;
-      height: 3rem;
-      font-size: 3rem;
-      line-height: 3rem;
+      width: 2.75rem;
+      height: 2.75rem;
+      font-size: 2.75rem;
+      line-height: 2.75rem;
     }
   }
 
@@ -91,32 +113,167 @@
       transform: scale(1.05);
       box-shadow: 0 0 0.5rem 0 var(--inverse-tertiary-text-color);
     }
+
+    @include desktop() {
+      padding: 1rem;
+      gap: 1rem;
+    }
+  }
+
+  &__contact-link-envelope {
+    @include d-flex-fd-ai-jc-g(row, center, center, 0);
+    color: var(--inverse-primary-text-color);
+    font-size: 2rem;
+    line-height: 2rem;
+    width: 2rem;
+    height: 2rem;
+    transition: var(--primary-all-transitions);
+
+    @include desktop() {
+      width: 2.25rem;
+      height: 2.25rem;
+      font-size: 2.25rem;
+      line-height: 2.25rem;
+    }
   }
 
   &__contact-link-paragraph {
     font-size: 0.75rem;
     margin: 0;
+
+    @include desktop() {
+      font-size: 1rem;
+    }
   }
 
-  &__credits {
-    position: relative;
-    text-align: center;
-    font-size: 0.8rem;
+  &__mobile-info {
+    grid-column: span 2;
+    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 2.5rem);
+
+    @include desktop() {
+      grid-column: auto;
+      gap: 3rem;
+    }
+  }
+
+  &__mobile {
+    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 1.5rem);
+
+    @include desktop() {
+      gap: 2rem;
+    }
+  }
+
+  &__mobile-message {
+    color: var(--inverse-secondary-text-color);
+    font-size: 0.75rem;
     margin: 0;
+
+    @include desktop() {
+      font-size: 1rem;
+    }
   }
 
-  &__credits::before {
-    content: '';
-    position: absolute;
-    top: -0.5rem;
-    left: 0;
-    width: 100%;
-    height: 0.125rem;
-    background-color: var(--primary-shadow-color);
+  &__mobile-image-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    justify-items: center;
+
+    @include desktop() {
+      grid-template-columns: 1fr;
+      justify-items: start;
+    }
   }
 
-  &__credits-author {
-    color: var(--primary-highlight-color);
+  &__mobile-image {
+    height: 3rem;
+
+    @include desktop() {
+      width: 192px;
+      height: auto;
+    }
+  }
+
+  &__info {
+    @include d-flex-fd-ai-jc-g(column, stretch, stretch, 0.5rem);
+
+    @include desktop() {
+      gap: 1rem;
+    }
+  }
+
+  &__info-subtitle {
+    color: var(--inverse-secondary-text-color);
+    font-weight: 700;
+    font-size: 0.75rem;
+    margin: 0;
+
+    @include desktop() {
+      font-size: 1rem;
+    }
+  }
+
+  &__info-message {
+    color: var(--inverse-secondary-text-color);
+    font-size: 0.75rem;
+    margin: 0;
+
+    @include desktop() {
+      font-size: 1rem;
+    }
+  }
+
+  &__info-message-link {
+    color: var(--secondary-button-color);
+  }
+}
+
+.footer-nav-footer {
+  background-color: var(--primary-theme-color);
+  border-top: 0.25rem solid var(--secondary-button-color);
+  padding: 1.5rem 0;
+
+  @include desktop() {
+    border-top: 0.375rem solid var(--secondary-button-color);
+    padding: 1.75rem 0;
+  }
+
+  &__container {
+    @include d-flex-fd-ai-jc-g(row, center, space-around, 1rem);
+    @include container;
+  }
+
+  &__subtitle {
+    color: var(--primary-text-color);
+    text-align: center;
+    font-weight: 700;
+    font-size: 0.625rem;
+    margin: 0;
     text-decoration: none;
+
+    @include desktop() {
+      font-size: 0.875rem;
+    }
+
+    &--icon {
+      @include d-flex-fd-ai-jc-g(row, center, center, 0.25rem);
+      
+      @include desktop() {
+        gap: 0.5rem;
+      }
+    }
+  }
+
+  &__subtitle-author {
+    color: var(--secondary-button-color);
+  }
+
+  &__subtitle-icon {
+    font-size: 1.25rem;
+
+    @include desktop() {
+      font-size: 1.5rem;
+    }
   }
 }
