update styles _mixins.scss d-grid-gtc-g

--- a/src/styles/scss/CinemasHome.scss
+++ b/src/styles/scss/CinemasHome.scss
@@ -112,8 +112,7 @@
   }
 
   &__cards-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, min(100%, 172px));
+    @include d-grid-gtc-g(repeat(auto-fit, min(100%, 172px), 0.75rem));
     justify-content: center;
     gap: 0.75rem;
 
