--- a/src/styles/scss/Footer.scss
+++ b/src/styles/scss/Footer.scss
@@ -232,19 +232,19 @@
   }
 
   &__info-message-link {
-    color: var(--secondary-button-color);
+    color: var(--secondary-highlight-color);
     transition: var(--primary-all-transitions);
   }
 }
 
 .footer-nav-footer {
   background-color: var(--primary-theme-color);
-  border-top: 0.25rem solid var(--secondary-button-color);
+  border-top: 0.25rem solid var(--secondary-highlight-color);
   padding: 1.5rem 0;
   transition: var(--secondary-all-transitions);
 
   @include desktop() {
-    border-top: 0.375rem solid var(--secondary-button-color);
+    border-top: 0.375rem solid var(--secondary-highlight-color);
     padding: 1.75rem 0;
   }
 
@@ -276,7 +276,8 @@
   }
 
   &__subtitle-author {
-    color: var(--secondary-button-color);
+    color: var(--primary-highlight-color);
+    font-weight: 700;
     transition: var(--primary-all-transitions);
   }
 
